tests/sksl/errors/ReservedNameNamespace.glsl
### Compilation failed:

error: 1: name 'namespace' is reserved
int namespace;
    ^^^^^^^^^
1 error
